--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Yadnesh</title>
+	<title>New Project</title>
 </head>
 <body>
-<h1>Happy Anniversary</h1>
+<h1>Let's complete this weeks course</h1>
 </body>
 </html>
